--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -34,11 +34,12 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+      - name: Install Semgrep
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install semgrep
       - name: Run Semgrep
-        uses: returntocorp/semgrep-action@v1
-        with:
-          config: "p/ci"
-          generateSarif: true
+        run: semgrep --config "p/ci" --sarif --output=semgrep.sarif
       - name: Upload Semgrep SARIF
         uses: github/codeql-action/upload-sarif@v3
         with:
@@ -76,7 +77,9 @@ jobs:
     needs:
       - dependency-security
     outputs:
-      image: ${{ steps.image_ref.outputs.image }}
+      image: ${{ steps.image_ref.outputs.image_name }}:${{ github.sha }}
+      image_name: ${{ steps.image_ref.outputs.image_name }}
+      digest: ${{ steps.image_ref.outputs.digest }}
     env:
       IMAGE_NAME: ghcr.io/prod-ai/platform-api
     steps:
@@ -97,6 +100,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build container image
+        id: build
         uses: docker/build-push-action@v5
         with:
           push: true
@@ -110,11 +114,10 @@ jobs:
           name: cyclonedx-sbom
           path: sbom.cdx.json
       - name: Run Syft container SBOM
-        uses: anchore/syft-action@v1
-        with:
-          image: ${{ env.IMAGE_NAME }}:${{ github.sha }}
-          format: cyclonedx-json
-          output: image.cdx.json
+        run: |
+          # Install Syft (Anchore) and generate CycloneDX SBOM for the built image
+          curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
+          /usr/local/bin/syft ${{ env.IMAGE_NAME }}:${{ github.sha }} -o cyclonedx-json > image.cdx.json
       - name: Upload image SBOM
         uses: actions/upload-artifact@v4
         with:
@@ -135,11 +138,7 @@ jobs:
         run: |
           echo "$COSIGN_PRIVATE_KEY" > cosign.key
           cosign sign --key cosign.key --yes $IMAGE_NAME:${{ github.sha }}
-      - name: Generate SLSA Provenance
-        uses: slsa-framework/slsa-github-generator/actions/nodejs@v2
-        with:
-          compile-builder: true
-          upload-assets: true
+
       - name: Cosign Attest SBOM
         env:
           COSIGN_EXPERIMENTAL: "1"
@@ -149,13 +148,31 @@ jobs:
           cosign attest --predicate sbom.cdx.json --type cyclonedx --key cosign.key $IMAGE_NAME:${{ github.sha }}
       - name: Export image reference
         id: image_ref
-        run: echo "image=${IMAGE_NAME}:${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
+        run: |
+          echo "image_name=${IMAGE_NAME}" >> "$GITHUB_OUTPUT"
+          echo "digest=${{ steps.build.outputs.digest }}" >> "$GITHUB_OUTPUT"
+
+  generate-slsa:
+    name: Generate SLSA Provenance
+    needs: container-build
+    permissions:
+      actions: read
+      id-token: write
+      packages: write
+    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v1.9.0
+    with:
+      image: ${{ needs.container-build.outputs.image_name }}
+      digest: ${{ needs.container-build.outputs.digest }}
+      registry-username: ${{ github.actor }}
+    secrets:
+      registry-password: ${{ secrets.GITHUB_TOKEN }}
 
   policy-gate:
     name: Policy Gate
     runs-on: ubuntu-22.04
     needs:
       - container-build
+      - generate-slsa
     env:
       IMAGE_NAME: ghcr.io/prod-ai/platform-api
     steps:
