--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "ts-node --project tsconfig.json src/index.ts",
     "lint": "eslint --ext .ts src",
-    "test": "cp .env.test .env && node --test dist/**/*.test.js",
+    "test": "cp .env.test .env && node --test \"dist/**/*.test.js\"",
     "migrate": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down"
   },
