--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -11,6 +11,7 @@ permissions:
   contents: read
   security-events: write
   id-token: write
+  packages: write
   attestations: write
 
 jobs:
@@ -66,7 +67,8 @@ jobs:
       image_name: ${{ steps.image_ref.outputs.image_name }}
       digest: ${{ steps.image_ref.outputs.digest }}
     env:
-      IMAGE_NAME: ghcr.io/prod-ai/platform-api
+      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/platform-api
+      IMAGE_OWNER: ${{ github.repository_owner }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -78,17 +80,39 @@ jobs:
         run: npm run build
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Login to GHCR
+      - name: Determine GHCR auth method
+        id: ghcr-auth
+        run: |
+          echo "IMAGE_OWNER=${IMAGE_OWNER}" >> $GITHUB_OUTPUT
+          echo "REPO_OWNER=${{ github.repository_owner }}" >> $GITHUB_OUTPUT
+          if [ "${IMAGE_OWNER}" = "${{ github.repository_owner }}" ]; then
+            # Use the built-in GITHUB_TOKEN when pushing into the same owner
+            echo "use_pat=false" >> $GITHUB_OUTPUT
+          else
+            # Will need a PAT stored in GHCR_TOKEN to push into a different owner
+            echo "use_pat=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Login to GHCR (choose token)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ github.event_name == 'push' && steps.ghcr-auth.outputs.use_pat == 'false' && secrets.GITHUB_TOKEN && 'true' || 'unset' }}
+        if: always()
+
+      - name: Login to GHCR with PAT if required
+        if: ${{ steps.ghcr-auth.outputs.use_pat == 'true' }}
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GHCR_USER }}
+          password: ${{ secrets.GHCR_TOKEN }}
       - name: Build container image
         id: build
         uses: docker/build-push-action@v5
         with:
-          push: true
+          push: ${{ github.event_name == 'push' }}
           tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
           file: ./Dockerfile
       - name: Generate CycloneDX SBOM
@@ -176,7 +200,7 @@ jobs:
       - container-build
       - generate-slsa
     env:
-      IMAGE_NAME: ghcr.io/prod-ai/platform-api
+      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/platform-api
     steps:
       - uses: actions/checkout@v4
       - name: Verify Cosign signature
