--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -67,7 +67,7 @@ jobs:
       image_name: ${{ steps.image_ref.outputs.image_name }}
       digest: ${{ steps.image_ref.outputs.digest }}
     env:
-      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/platform-api
+      IMAGE_NAME: ghcr.io/${{ toLower(github.repository_owner) }}/platform-api
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -88,9 +88,9 @@ jobs:
           echo "Actor: ${{ github.actor }}"
           echo "Event: ${{ github.event_name }}"
           
-          # Verify we're pushing to the correct namespace
-          if [[ "${IMAGE_NAME}" != "ghcr.io/${{ github.repository_owner }}/platform-api" ]]; then
-            echo "❌ Error: IMAGE_NAME mismatch. Expected ghcr.io/${{ github.repository_owner }}/platform-api, got ${IMAGE_NAME}"
+          # Verify we're pushing to the correct namespace (lowercased owner)
+          if [[ "${IMAGE_NAME}" != "ghcr.io/${GITHUB_REPOSITORY_OWNER,,}/platform-api" ]]; then
+            echo "❌ Error: IMAGE_NAME mismatch. Expected ghcr.io/${GITHUB_REPOSITORY_OWNER,,}/platform-api, got ${IMAGE_NAME}"
             exit 1
           fi
           
@@ -202,7 +202,7 @@ jobs:
       - container-build
       - generate-slsa
     env:
-      IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/platform-api
+      IMAGE_NAME: ghcr.io/${{ toLower(github.repository_owner) }}/platform-api
     steps:
       - uses: actions/checkout@v4
       - name: Verify Cosign signature
@@ -211,4 +211,12 @@ jobs:
         run: cosign verify ${{ needs.container-build.outputs.image }}
       - name: Fail if attestation missing
         run: |
+          # Extra guard: ensure IMAGE_NAME owner is lowercase (docker requires lowercase repository names)
+          OWNER_PART=$(echo "$IMAGE_NAME" | awk -F'/' '{print $2}')
+          if [[ "$OWNER_PART" =~ [A-Z] ]]; then
+            echo "❌ IMAGE_NAME owner contains uppercase letters: $OWNER_PART"
+            echo "    Ensure the owner is lowercased, e.g. use toLower(github.repository_owner)"
+            exit 1
+          fi
+
           cosign verify-attestation --type cyclonedx --certificate-identity-regexp ".*" --certificate-oidc-issuer https://token.actions.githubusercontent.com $IMAGE_NAME:${{ github.sha }}
