--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -175,6 +175,14 @@ jobs:
           severity: 'HIGH,CRITICAL'
           exit-code: '1'
           ignore-unfixed: true
+      - name: Install Cosign
+        if: github.event_name == 'push'
+        uses: sigstore/cosign-installer@v3
+        with:
+          cosign-release: 'v2.4.1'
+      - name: Verify Cosign Installed
+        if: github.event_name == 'push'
+        run: cosign version
       - name: Cosign Sign Container
         if: github.event_name == 'push'
         env:
@@ -228,9 +236,11 @@ jobs:
         shell: bash
         run: echo "IMAGE_NAME=ghcr.io/${GITHUB_REPOSITORY_OWNER,,}/platform-api" >> "$GITHUB_ENV"
       - name: Install Cosign
-        run: |
-          sudo wget -O /usr/local/bin/cosign https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64
-          sudo chmod +x /usr/local/bin/cosign
+        uses: sigstore/cosign-installer@v3
+        with:
+          cosign-release: 'v2.4.1'
+      - name: Verify Cosign Installed
+        run: cosign version
       - name: Verify Cosign signature
         env:
           COSIGN_EXPERIMENTAL: "1"
