--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -183,24 +183,19 @@ jobs:
       - name: Verify Cosign Installed
         if: github.event_name == 'push'
         run: cosign version
-      - name: Cosign Sign Container
+      - name: Cosign Sign Container (keyless)
         if: github.event_name == 'push'
         env:
           COSIGN_EXPERIMENTAL: "1"
-          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
-          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         run: |
-          echo "$COSIGN_PRIVATE_KEY" > cosign.key
-          cosign sign --key cosign.key --yes $IMAGE_NAME:${{ github.sha }}
+          cosign sign --yes $IMAGE_NAME:${{ github.sha }}
 
-      - name: Cosign Attest SBOM
+      - name: Cosign Attest SBOM (keyless)
         if: github.event_name == 'push'
         env:
           COSIGN_EXPERIMENTAL: "1"
-          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
-          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         run: |
-          cosign attest --predicate sbom.cdx.json --type cyclonedx --key cosign.key $IMAGE_NAME:${{ github.sha }}
+          cosign attest --predicate sbom.cdx.json --type cyclonedx $IMAGE_NAME:${{ github.sha }}
       - name: Export image reference
         id: image_ref
         run: |
@@ -241,7 +236,7 @@ jobs:
           cosign-release: 'v2.4.1'
       - name: Verify Cosign Installed
         run: cosign version
-      - name: Verify Cosign signature
+      - name: Verify Cosign signature (keyless)
         env:
           COSIGN_EXPERIMENTAL: "1"
         run: cosign verify ${{ needs.container-build.outputs.image }}
